@@ -117,6 +117,7 @@ PHP                                                                        NEWS
   . Added SOL_UPDLITE, UDPLITE_RECV_CSCOV and UDPLITE_SEND_CSCOV for updlite
     protocol support. (David Carlier)
   . Added SO_RERROR, SO_ZEROIZE and SO_SPLICE netbsd and openbsd constants.
+  . Added TCP_REPAIR for quietly close a connection.
 
 - Standard:
   . E_NOTICEs emitted by unserialize() have been promoted to E_WARNING. (timwolla)
